# dbscoring

./: .gitignore  AGENTS.md  PLAN.md  README.md  REPORT_REQUIREMENTS.md  TODO.md  main.py  pyproject.toml
data/: README.md
docs/: README.md  data_description.docx
models/: README.md
notebooks/: README.md  lab3_learning_version.ipynb  lab3_learning_version_polars.ipynb  lab3_simple_solution.ipynb  lab3_simple_solution.py  lab3_simple_solution_explained.ipynb  lab3_teacher_version.ipynb  polars_lab.ipynb  spark_lab.ipynb  typical_questions_history_attrs.ipynb
reference/: code.txt  report.docx
schemas/: README.md  schema_v1.drawio  schema_v2.drawio  schema_v3.drawio  schema_v4.drawio  schema_v4_1.drawio
scripts/: lab3_learning_version.py  lab3_teacher_version.py
src/: README.md
src/dbscoring/: __init__.py  __main__.py  cli.py  contracts.py  etl.py  paths.py  testing.py
src/dbscoring/ml/: __init__.py  frame.py  labels.py  pipeline.py
tests/: AGENTS.md  README.md  __init__.py  conftest.py  fixture_builders.py  notebook_loader.py  test_data_dir_resolution.py  test_notebook_smoke.py  test_notebook_structure.py  test_parity.py  test_polars_notebook.py  test_spark_integration.py  test_spark_notebook_unit.py  test_spark_runtime_config.py  test_src_model.py  test_warehouse.py
tests/contract/: test_contracts.py  test_notebooks.py
tests/integration/: test_cli.py  test_etl_polars.py
tests/unit/: test_ml.py
