[project]
name = "dbscoring"
version = "0.1.0"
description = "Production-grade notebook and package implementation for a credit-scoring data engineering lab."
requires-python = ">=3.12,<3.13"
dependencies = [
    "catboost>=1.2.8",
    "numpy>=2.0",
    "optuna>=4.0",
    "pandas>=2.2",
    "polars>=1.40.1",
    "pyarrow>=18.0",
    "rich>=13.9",
    "scikit-learn>=1.5",
    "typer>=0.15",
]

[project.scripts]
dbscoring = "dbscoring.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = [
    "quick: small deterministic tests for fast local feedback",
    "unit: isolated unit tests",
    "integration: tests that validate component interactions",
    "contract: schema/data-contract validation",
    "slow: long-running or resource-intensive tests",
    "property: randomized property tests",
]
